--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin recipes</title>
+        <title>သုခိတာ စိန်ရွှေရတာနာဆိုင်</title>
     </head>
     <body>
         <h1>Lemonade Cake</h1>
@@ -16,7 +16,7 @@
                 <li>2 cups heavy whipping cream</li>
                 <li>2 tablespoons white sugar</li>
             </ul>
-            <a href="./recipes/lasagna.html">Hearty Vegetable Lasagna</a>
+            <a href="recipes/lasagna.html">Hearty Vegetable Lasagna</a>
     </body>
 
 </html>
