--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li>2 tablespoons white sugar</li>
             </ul>
             <a href="recipes/lasagna.html">Hearty Vegetable Lasagna</a>
+            <a href="Bracelets/index.html">ရွှေလက်ကောက်နှင့်ရွှေဟန်းချိန်းများ</a>
     </body>
 
 </html>
