--- a/Rings/rings.html
+++ b/Rings/rings.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lasagna</title>
+        <title>ရွှေလက်စွပ်များ</title>
     </head>
     <body>
-        <h1>Hearty Vegetable Lasagna</h1>
+        <h1>ရွှေလက်စွပ်များ</h1>
         <h5>This hearty, vegetable lasagna is the only lasagna my husband will eat. We love it!!! Hope you all enjoy as much as we do.</h5>
         <h6>Ingredients</h6>
             <ul>
