--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li>2 cups heavy whipping cream</li>
                 <li>2 tablespoons white sugar</li>
             </ul>
-            <a href="recipes/lasagna.html">Hearty Vegetable Lasagna</a>
+            <a href="Rings/rings.html">‌ရွှေလက်စွပ်များ</a>
             <a href="Bracelets/index.html">ရွှေလက်ကောက်နှင့်ရွှေဟန်းချိန်းများ</a>
     </body>
 
