adding style.css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <head>
         <meta charset="UTF-8">
         <title>သုခိတာ စိန်ရွှေရတာနာဆိုင်</title>
     </head>
     <body>
         <h1>သုခိတာ စိန်ရွှေရတာရွေဆိုင်မှ မိတ်ဟောင်းမိတ်သစ်များအားလုံးကို အစဉ်ထာဝရ နွေးထွေးပြူငှာစွာ ကြိုဆိုလျှက်ပါ</h1>
  
-        <h5>This is my husband's favorite cake. It is two layers of yellow cake with a lemonade flavored ice cream center. Wonderful on a hot day.</h5>
-        <h6>Ingredients</h6>
+        <p>This is my husband's favorite cake. It is two layers of yellow cake with a lemonade flavored ice cream center. Wonderful on a hot day.</p>
+        <div>Ingredients</div>
             <ul>
                 <li>1 package yellow cake mix</li>
                 <li>1 quart vanilla ice cream</li>
