Adding The Odin Project Exercises

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </ul>
             <a href="Rings/rings.html">‌ရွှေလက်စွပ်များ</a>
             <a href="Bracelets/index.html">ရွှေလက်ကောက်နှင့်ရွှေဟန်းချိန်းများ</a>
+            <a href="TOPPracticses/index.html">The Odin Project Exercises</a>
     </body>
 
 </html>
