1st line external css

--- a/TOPPracticses/index.html
+++ b/TOPPracticses/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Method for Adding CSS</title>
+        <link rel="stylesheet" href="externalstyles.css">
     </head>
     <body>
-        <div><h1>style me via the external method!</h1></div>
+        <div><b></b>style me via the external method!</b></div>
         <p>I would like to be styled with the internal method, please.</p>
         <buttom>Inline method</buttom>
     </body>
