--- a/TOPPracticses/index.html
+++ b/TOPPracticses/index.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <title>Method for Adding CSS</title>
         <link rel="stylesheet" href="externalstyles.css">
+        <style>
+            p {
+                background-color: green;
+                color: white;
+                font-size: 18px;
+            }
+        </style>
     </head>
     <body>
         <div><b></b>style me via the external method!</b></div>
