--- a/TOPPracticses/index.html
+++ b/TOPPracticses/index.html
@@ -15,6 +15,6 @@
     <body>
         <div><b></b>style me via the external method!</b></div>
         <p>I would like to be styled with the internal method, please.</p>
-        <buttom>Inline method</buttom>
+        <button type="button">Inline method</button>
     </body>
 </html>
