--- a/TOPPracticses/index.html
+++ b/TOPPracticses/index.html
@@ -15,6 +15,6 @@
     <body>
         <div><b></b>style me via the external method!</b></div>
         <p>I would like to be styled with the internal method, please.</p>
-        <button type="button" style="background-color: orange; font-size: 18px;">Inline method</button>
+        <button type="button"><div style="color:black; background-color: orange; font-size: 18px;">Inline method</div></button>
     </body>
 </html>
