--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>သုခိတာ စိန်ရွှေရတာနာဆိုင်</title>
     </head>
     <body>
-        <div><h1>သုခိတာ စိန်ရွှေရတာရွေဆိုင်မှ မိတ်ဟောင်းမိတ်သစ်များအားလုံးကို အစဉ်ထာဝရ နွေးထွေးပြူငှာစွာ ကြိုဆိုလျှက်ပါ</h1></div>
+        <div><h1>သုခိတာ စိန်ရွှေရတနာရွှေဆိုင်မှ မိတ်ဟောင်းမိတ်သစ်များအားလုံးကို အစဉ်ထာဝရ နွေးထွေးပြူငှာစွာ ကြိုဆိုလျှက်ပါ</h1></div>
  
         <p>This is my husband's favorite cake. It is two layers of yellow cake with a lemonade flavored ice cream center. Wonderful on a hot day.</p>
         <div>Ingredients</div>
