--- a/TOPPracticses/index.html
+++ b/TOPPracticses/index.html
@@ -10,11 +10,31 @@
                 color: white;
                 font-size: 18px;
             }
+            .oddnumbers{
+                background-color: rgb(255,184,194);
+                font-family: ; Verdana, DejaVu Sans, sans-serif;
+            }
+
         </style>
     </head>
     <body>
         <div><b></b>style me via the external method!</b></div>
         <p>I would like to be styled with the internal method, please.</p>
         <button type="button"><div style="color:black; background-color: orange; font-size: 18px;">Inline method</div></button>
+        <div class="oddnumbers">
+            <p>Number 1 - I'm a class!</p>
+        </div>
+        <div class="evennumbers">
+            <p>Number 2 - I'm a class!</p>
+        </div>
+        <div class="oddnumbers">
+            <p>Number 3 - I'm a class, but cooler!</p>
+        </div>
+        <div class="evennumbers">
+            <p>Number 4 - I'm a class!</p>
+        </div>
+        <div class="oddnumbers">
+            <p>Number 5 - I'm a class!</p>
+        </div>
     </body>
 </html>
