--- a/TOPPracticses/index.html
+++ b/TOPPracticses/index.html
@@ -21,20 +21,10 @@
         <div><b></b>style me via the external method!</b></div>
         <p>I would like to be styled with the internal method, please.</p>
         <button type="button"><div style="color:black; background-color: orange; font-size: 18px;">Inline method</div></button>
-        <div class="oddnumbers">
-            <p>Number 1 - I'm a class!</p>
-        </div>
-        <div class="evennumbers">
-            <p>Number 2 - I'm a class!</p>
-        </div>
-        <div class="oddnumbers">
-            <p>Number 3 - I'm a class, but cooler!</p>
-        </div>
-        <div class="evennumbers">
-            <p>Number 4 - I'm a class!</p>
-        </div>
-        <div class="oddnumbers">
-            <p>Number 5 - I'm a class!</p>
-        </div>
+        <div class="oddnumbers">Number 1 - I'm a class!</div>
+        <div class="evennumbers">Number 2 - I'm one ID.</div>
+        <div class="oddnumbers">Number 3 - I'm a class, but cooler!</div>
+        <div class="evennumbers">Number 4 - I'm another ID.</div>
+        <div class="oddnumbers">Number 5 - I'm a class!</div>
     </body>
 </html>
