--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <li>2 cups heavy whipping cream</li>
                 <li>2 tablespoons white sugar</li>
             </ul>
-            <a href="Rings/rings.html">‌ရွှေလက်စွပ်များ</a>
-            <a href="Bracelets/index.html">ရွှေလက်ကောက်နှင့်ရွှေဟန်းချိန်းများ</a>
-            <a href="TOPPracticses/index.html">The Odin Project Exercises</a>
+            <a href="Rings/rings.html" style="color:black; font-weight:bold;">‌ရွှေလက်စွပ်များ</a>
+            <a href="Bracelets/index.html" style="color:black; font-weight:bold;">ရွှေလက်ကောက်နှင့်ရွှေဟန်းချိန်းများ</a>
+            <a href="TOPPracticses/index.html" style="color:black; font-weight:bold;">The Odin Project Exercises</a>
     </body>
 
 </html>
